MODINV-1078 - POST to /inventory/instances does not return newly-created object (#859)